--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "1.4.0",
   "dependencies": {
     "angular": "1.5.5",
-    "angular-ui-router": "0.3.0"
+    "angular-ui-router": "0.3.0",
+    "angular-bootstrap":"2.5.0"
   }
 }
