--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "uglify-save-license": "^0.4.1",
     "wiredep": "^4.0.0",
     "wrench": "^1.5.9"
+  },
+  "dependencies": {
+    "bower": "^1.8.0"
   }
 }
