--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "wrench": "^1.5.9"
   },
   "dependencies": {
-    "bower": "^1.8.0"
+    "bower": "^1.8.0",
+    "install": "^0.10.1"
   }
 }
