--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "angular": "1.5.5",
     "angular-ui-router": "0.3.0",
-    "angular-bootstrap":"2.5.0"
+    "angular-bootstrap": "2.5.0",
+    "angularUtils-pagination": "angular-utils-pagination#^0.11.1"
   }
 }
