--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-inject": "^4.2.0",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-minify": "^2.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-rev": "^7.1.2",
